# Advent-of-Code

./: Cargo.toml  README.md  justfile
crates/2025/: Cargo.toml
crates/2025/src/: day_1.rs  day_2.rs  day_3.rs  helpers.rs
