[package]
name = "aoc2025"
version.workspace = true
edition.workspace = true
license.workspace = true
resolver = "3"

[dependencies]
anyhow = "1.0.100"

[lints]
workspace = true

[[bin]]
name = "day_1"
path = "src/day_1.rs"

[[bin]]
name = "day_2"
path = "src/day_2.rs"

[[bin]]
name = "day_3"
path = "src/day_3.rs"